--- a/templates/support.html
+++ b/templates/support.html
@@ -10,6 +10,17 @@
       padding: 40px;
       text-align: center;
     }
+    .app-footer {
+        max-width: 500px;
+        margin: 30px auto 10px;
+        text-align: center;
+    }
+    
+    .disclaimer {
+        font-size: 0.8rem;
+        color: #6c757d;
+        line-height: 1.4;
+    }
 
     .container {
       max-width: 700px;
@@ -130,6 +141,7 @@
 
   </form>
 </div>
+{% include "footer.html" %}
 
 </body>
 </html>
